[package]
name = "hooks_client"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]

[lib]
name = "hooks_client"
path = "src/lib.rs"

[dependencies]
hooks_util = { path = "../hooks_util" }
hooks_game = { path = "../hooks_game" }
hooks_show = { path = "../hooks_show" }
ggez = { git = "https://github.com/ggez/ggez.git", branch = "devel" }
specs = "0.11"
specs-derive = "0.2"
shred = "0.6.2"
log = "0.4"
bit_manager = "*"
env_logger = "0.5.0-rc.2"
rand = "0.4"
nalgebra = "0.15"
winit = "0.15"

[[example]]
name = "random_bot"
