[package]
name = "hooks_common"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]

[dependencies]
bit_manager = "*"
bit_manager_derive = "*"
shred = "0.5.0"
shred-derive = "0.3.0"
specs = "0.10.0"
specs-derive = "0.1.0"
nalgebra = { version = "0.13.1" }
ncollide = { git = "https://github.com/sebcrozet/ncollide.git", branch = "send_sync" }
libc = "0.2"
enet-sys = "0.1.4"
mopa = "0.2.2"
take_mut = "0.2.0"
log = "0.4"
