[package]
name = "hooks_common"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]

[dependencies]
hooks_util = { path = "../hooks_util" }
bit_manager = "*"
bit_manager_derive = "*"
shred = "0.5.0"
shred-derive = "0.3.0"
specs = "0.10.0"
specs-derive = "0.1.0"
nalgebra = "0.14.0"
ncollide = { git = "https://github.com/sebcrozet/ncollide.git" }
libc = "0.2"
enet-sys = "0.1.4"
mopa = "0.2.2"
take_mut = "0.2.0"
log = "0.4"
rand = "0.4"
