[package]
name = "hooks_common"
version = "0.1.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]

[dependencies]
hooks_util = { path = "../hooks_util" }
bit_manager = "*"
bit_manager_derive = "*"
shred = "0.6.2"
shred-derive = "0.4.0"
specs = { git = "https://github.com/slide-rs/specs.git" }
specs-derive = { git = "https://github.com/slide-rs/specs.git" }
nalgebra = "0.14.0"
ncollide = { git = "https://github.com/sebcrozet/ncollide.git" }
enet-sys = "0.2.0"
mopa = "0.2.2"
log = "0.4"
rand = "0.4"
