[package]
name = "hooks_game"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]

[dependencies]
hooks_util = { path = "../hooks_util" }
bit_manager = "*"
bit_manager_derive = "*"
shred = "0.7.0"
shred-derive = "0.5.0"
specs = "0.11"
specs-derive = "0.2"
nalgebra = "0.15"
ncollide2d = "0.16"
enet-sys = "0.2.0"
mopa = "0.2.2"
log = "0.4"
rand = "0.4"
