[package]
name = "hooks_server"
version = "0.1.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]

[features]
default = []

show = ["hooks_show"]

[dependencies]
hooks_util = { path = "../hooks_util" }
hooks_common = { path = "../hooks_common" }
hooks_show = { path = "../hooks_show", optional = true }
shred = "0.6.2"
log = "0.4"
bit_manager = "*"
env_logger = "0.5.0-rc.2"
rand = "0.4"
