[package]
name = "hooks_show"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]

[dependencies]
hooks_util = { path = "../hooks_util" }
hooks_common = { path = "../hooks_common" }
ggez = "0.4.0"
specs = "0.10.0"
specs-derive = "0.1.0"
log = "0.4"
bit_manager = "*"
env_logger = "0.5.0-rc.2"
nalgebra = { version = "0.13.1" }
