[package]
name = "hooks_show"
version = "0.1.0"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]

[dependencies]
hooks_util = { path = "../hooks_util" }
hooks_common = { path = "../hooks_common" }
ggez = { git = "https://github.com/leod/ggez.git", branch = "nalgebra-0.14" }
particle-frenzy = { git = "https://github.com/leod/particle-frenzy.git" }
specs = { git = "https://github.com/slide-rs/specs.git" }
specs-derive = { git = "https://github.com/slide-rs/specs.git" }
log = "0.4"
bit_manager = "*"
env_logger = "0.5.0-rc.2"
nalgebra = "0.14"
gfx_device_gl = "0.15"
