[package]
name = "hooks_show"
version = "0.1.0"
authors = ["leod <subtle.frustration@proton.me>"]

[dependencies]
hooks_util = { path = "../hooks_util" }
hooks_game = { path = "../hooks_game" }
ggez = { git = "https://github.com/ggez/ggez.git", branch = "devel" }
particle-frenzy = { git = "https://github.com/leod/particle-frenzy.git" }
specs = "0.11"
specs-derive = "0.2"
log = "0.4"
bit_manager = "*"
env_logger = "0.5.0-rc.2"
nalgebra = "0.15"
gfx_device_gl = "0.15"
